--- a/app/src/main/res/layout/item_medicine_info.xml
+++ b/app/src/main/res/layout/item_medicine_info.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
     app:cardUseCompatPadding="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -26,6 +25,7 @@
                 android:id="@+id/product_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:scaleType="centerCrop"
                 app:srcCompat="@drawable/test_product_image" />
 
         </androidx.cardview.widget.CardView>
@@ -106,7 +106,7 @@
                 android:id="@+id/ruble"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="5dp"
+                android:layout_marginEnd="16dp"
                 android:text="@string/spaced_ruble"
                 app:fontFamily="@font/roboto_medium" />
 
