--- a/app/src/main/res/layout/medicine_info.xml
+++ b/app/src/main/res/layout/medicine_info.xml
@@ -1,9 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
 
     <TextView
         android:id="@+id/textViewLabelTitle"
@@ -19,10 +17,10 @@
     <View
         android:id="@+id/view2"
         style="@style/BorderStyle"
-        app:layout_constraintBottom_toTopOf="@id/formPill"
+        app:layout_constraintBottom_toTopOf="@id/form_pill"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/countryPill" />
+        app:layout_constraintTop_toBottomOf="@id/country_pill" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineCenter"
@@ -32,14 +30,14 @@
         app:layout_constraintGuide_percent="0.5" />
 
     <TextView
-        android:id="@+id/countryPill"
+        android:id="@+id/country_pill"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:textSize="@dimen/text_normal"
+        android:layout_marginEnd="8dp"
         android:text="TextView"
+        android:textSize="@dimen/text_normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
         app:layout_constraintTop_toTopOf="parent" />
@@ -53,28 +51,28 @@
         android:layout_marginTop="8dp"
         android:text="Форма:"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/countryPill" />
+        app:layout_constraintTop_toBottomOf="@+id/country_pill" />
 
     <TextView
-        android:id="@+id/formPill"
+        android:id="@+id/form_pill"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:textSize="@dimen/text_normal"
+        android:layout_marginEnd="8dp"
         android:text="TextView"
+        android:textSize="@dimen/text_normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
-        app:layout_constraintTop_toBottomOf="@+id/countryPill" />
+        app:layout_constraintTop_toBottomOf="@+id/country_pill" />
 
     <View
         android:id="@+id/view"
         style="@style/BorderStyle"
-        app:layout_constraintBottom_toTopOf="@id/dosagePill"
+        app:layout_constraintBottom_toTopOf="@id/dosage_pill"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/formPill" />
+        app:layout_constraintTop_toBottomOf="@id/form_pill" />
 
     <TextView
         android:id="@+id/textViewLabelRating"
@@ -85,26 +83,26 @@
         android:layout_marginTop="8dp"
         android:text="Дозировка:"
         app:layout_constraintStart_toEndOf="@+id/imageView3"
-        app:layout_constraintTop_toBottomOf="@+id/formPill" />
+        app:layout_constraintTop_toBottomOf="@+id/form_pill" />
 
     <TextView
-        android:id="@+id/dosagePill"
+        android:id="@+id/dosage_pill"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:textSize="@dimen/text_normal"
         android:text="TextView"
+        android:textSize="@dimen/text_normal"
         app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
-        app:layout_constraintTop_toBottomOf="@+id/formPill" />
+        app:layout_constraintTop_toBottomOf="@+id/form_pill" />
 
     <View
         android:id="@+id/view3"
         style="@style/BorderStyle"
-        app:layout_constraintBottom_toTopOf="@id/isRecipe"
+        app:layout_constraintBottom_toTopOf="@id/is_recipe"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/dosagePill" />
+        app:layout_constraintTop_toBottomOf="@id/dosage_pill" />
 
     <TextView
         android:id="@+id/textViewLabelReleaseDate"
@@ -115,53 +113,48 @@
         android:layout_marginTop="8dp"
         android:text="Разрешение:"
         app:layout_constraintStart_toEndOf="@+id/imageView4"
-        app:layout_constraintTop_toBottomOf="@+id/dosagePill" />
+        app:layout_constraintTop_toBottomOf="@+id/dosage_pill" />
 
     <TextView
-        android:id="@+id/isRecipe"
+        android:id="@+id/is_recipe"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:textSize="@dimen/text_normal"
+        android:layout_marginEnd="8dp"
         android:text="TextView"
+        android:textSize="@dimen/text_normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
-        app:layout_constraintTop_toBottomOf="@+id/dosagePill" />
+        app:layout_constraintTop_toBottomOf="@+id/dosage_pill" />
 
-    <View style="@style/BorderStyle"
-        app:layout_constraintStart_toStartOf="parent"
+    <View
+        style="@style/BorderStyle"
+        app:layout_constraintBottom_toTopOf="@id/textViewLabelDescription"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/isRecipe"
-        app:layout_constraintBottom_toTopOf="@id/textViewLabelDescription"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/is_recipe" />
 
     <TextView
         android:id="@+id/textViewLabelDescription"
+        style="@style/LabelStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        style="@style/LabelStyle"
         android:text="Описание"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/isRecipe" />
+        app:layout_constraintTop_toBottomOf="@+id/is_recipe" />
+
 
     <TextView
-        android:id="@+id/descriptionPill"
+        android:id="@+id/description_pill"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_margin="8dp"
         android:text="TextView"
         android:textSize="@dimen/text_normal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewLabelDescription" />
-
-    <View
-        style="@style/BorderStyle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/descriptionPill" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -203,6 +196,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view3"
         app:srcCompat="@drawable/ic_doctor" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
