--- a/app/src/main/res/layout/activity_medecine_detail.xml
+++ b/app/src/main/res/layout/activity_medecine_detail.xml
@@ -11,15 +11,23 @@
         android:layout_height="wrap_content"
         tools:context=".MedicineDetailActivity">
 
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar_detail_activity"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/teal_200"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
         <ImageView
             android:id="@+id/product_detail_image"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintBottom_toTopOf="@+id/addButton"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_height="300dp"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar_detail_activity"
             app:srcCompat="@drawable/test_product_image" />
 
         <include
@@ -34,15 +42,13 @@
 
         <Button
             android:id="@+id/addButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="54dp"
             android:backgroundTint="@color/teal_700"
-            android:paddingTop="44dp"
-            android:paddingBottom="44dp"
             android:text="Добавить в корзину"
             app:layout_constraintBottom_toBottomOf="@+id/background"
             app:layout_constraintEnd_toEndOf="@+id/background"
-            app:layout_constraintTop_toTopOf="@+id/background" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <View
             android:id="@+id/background"
@@ -56,14 +62,14 @@
             android:id="@+id/price_pill"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="45dp"
-            android:text="99.99"
+            android:layout_marginStart="61dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="54dp"
+            android:text="@string/price_text"
             android:textColor="@color/white"
             android:textSize="@dimen/text_xlarge"
             app:fontFamily="@font/roboto_medium"
-            app:layout_constraintEnd_toStartOf="@+id/addButton"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintEnd_toStartOf="@+id/minus_count"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/product_detail_image" />
 
@@ -71,35 +77,33 @@
             android:id="@+id/plus_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="30dp"
-            android:layout_marginBottom="12dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="80dp"
             android:src="@drawable/ic_plusbtn"
-            app:layout_constraintBottom_toBottomOf="@+id/background"
-            app:layout_constraintEnd_toStartOf="@+id/addButton" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/product_detail_image" />
 
         <ImageView
             android:id="@+id/minus_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="12dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="22dp"
             android:src="@drawable/ic_minusbtn"
-            app:layout_constraintBottom_toBottomOf="@+id/background"
             app:layout_constraintEnd_toStartOf="@+id/count_pill"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="@+id/background" />
+            app:layout_constraintTop_toBottomOf="@+id/product_detail_image" />
 
         <TextView
             android:id="@+id/count_pill"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="4dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="22dp"
             android:text="0"
             android:textColor="@color/white"
             android:textSize="@dimen/text_large"
             app:layout_constraintEnd_toStartOf="@+id/plus_count"
-            app:layout_constraintTop_toBottomOf="@+id/price_pill" />
+            app:layout_constraintTop_toBottomOf="@+id/product_detail_image" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
