--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,4 +24,11 @@
         <item name="android:layout_width">0dp</item>
         <item name="android:background">@color/color_primary_variant</item>
     </style>
+    <style name="CartProductImageCardView">
+        <item name="android:layout_width">72dp</item>
+        <item name="android:layout_height">72dp</item>
+        <item name="android:layout_margin">@dimen/padding_margin_xlarge</item>
+        <item name="cardCornerRadius">8dp</item>
+        <item name="cardElevation">0dp</item>
+    </style>
 </resources>
